# amplifier-qna-bundle

./: .gitignore  bundle.md
agents/: requirements-analyst.md
behaviors/: qna.md  qna.yaml
context/: qna-instructions.md
modules/tool-qna/: pyproject.toml
modules/tool-qna/amplifier_module_tool_qna/: __init__.py  models.py  reports.py  templates.py
modules/tool-qna/amplifier_tool_qna/: __init__.py  loader.py
templates/: api-design-review.yaml
