[project]
name = "amplifier-module-tool-qna"
version = "0.1.0"
description = "Structured Q&A tool for gathering requirements"
requires-python = ">=3.11"

[project.entry-points."amplifier.modules"]
tool-qna = "amplifier_module_tool_qna:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_tool_qna"]
